[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "stntrading"
authors = [
  { name="offish", email="overutilization@gmail.com" },
]
description = "Interact with STNTrading's API"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["tf2", "stntrading", "stn"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests"]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/offish/stntrading"
"Bug Tracker" = "https://github.com/offish/stntrading/issues"

[tool.setuptools_scm]